<resources>
    <string name="app_name">Pinterest Clone</string>
    <string name="str_home">home</string>
    <string name="str_profile">profile</string>
    <string name="str_chat">chat</string>
    <string name="str_search">Search</string>
    <string name="str_read_it">Read it</string>
    <string name="str_save">Save</string>
    <string name="str_share_your_feed_back">Share your feedback</string>
    <string name="str_add_a_comment">Add a comment</string>
    <string name="str_more_like_this">More like this</string>
    <string name="str_love_this_pin_let_know">Love this Pin? Let</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_search_for_ideas">Search for ideas</string>
    <string name="str_ideas_for_you">Ideas for you</string>
    <string name="str_popular_on_pinterest">Popular on Pinterest</string>
    <string name="str_share_ideas_with_your_friends">Share ideas with your friends</string>
    <string name="str_new_messages">New messages</string>
    <string name="str_messages">Messages</string>
    <string name="str_updates">Updates</string>
    <string name="str_explore">Explore</string>
    <string name="str_profiles">Profiles</string>
    <string name="str_followers">followers</string>
    <string name="str_following">following</string>
    <string name="str_know">know!</string>
</resources>