<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:background="@drawable/linear_layout_rectengle"
                    android:orientation="vertical">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/black">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:id="@+id/iv_detailed_photo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:adjustViewBounds="true"
                            android:scaleType="fitCenter"
                            android:src="@color/teal_700"
                            app:shapeAppearanceOverlay="@style/rounded1" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="?attr/actionBarSize"
                            android:gravity="center_vertical|end">

                            <ImageView
                                android:id="@+id/iv_more"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:layout_marginEnd="15dp"
                                android:src="@drawable/ic_more_horiz_detail" />

                        </LinearLayout>

                    </FrameLayout>

                    <TextView
                        android:id="@+id/description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="40dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginRight="40dp"
                        android:gravity="center"
                        android:text=""
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textSize="22sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/iv_comments"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="0.5"
                            android:src="@drawable/ic_comments" />

                        <Button
                            android:id="@+id/btn_read_it"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="2.5dp"
                            android:layout_weight="1"
                            android:background="@drawable/button_corner_rounded"
                            android:gravity="center"
                            android:text="@string/str_read_it"
                            android:textAllCaps="false"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="normal"
                            app:backgroundTint="@null" />

                        <Button
                            android:id="@+id/btn_save"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="2.5dp"
                            android:layout_weight="1"
                            android:background="@drawable/red_button_corner_rounded"
                            android:gravity="center"
                            android:singleLine="true"
                            android:text="@string/str_save"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            android:textStyle="normal"
                            app:backgroundTint="@null" />

                        <ImageView
                            android:id="@+id/iv_share"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="0.5"
                            android:src="@drawable/ic_share" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/linear_layout_rectengle"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/str_share_your_feed_back"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/comment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/str_love_this_pin_let_know"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">

                        <com.google.android.material.imageview.ShapeableImageView
                            android:id="@+id/iv_profile"
                            android:layout_width="55dp"
                            android:layout_height="55dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/picture4"
                            app:shapeAppearanceOverlay="@style/circle" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_gravity="center"
                            android:layout_marginStart="10dp"
                            android:background="@color/white"
                            android:focusable="false"
                            android:hint="@string/str_add_a_comment"
                            android:textSize="16sp" />

                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="2dp"
                    android:background="@drawable/linear_layout_rectengle"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="15dp"
                        android:gravity="center"
                        android:text="@string/str_more_like_this"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />


                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/linear_layout_rectengle">


                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/relatedView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/white" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="top"
                            android:gravity="center_horizontal">

                            <ProgressBar
                                android:id="@+id/pb_loading"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:visibility="gone" />

                        </LinearLayout>

                    </FrameLayout>


                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginTop="10dp"
            app:titleTextColor="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="25dp"
                android:gravity="center_vertical">

                <LinearLayout
                    android:id="@+id/iv_back"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_back" />

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

    </FrameLayout>


</LinearLayout>
